--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <h2>İletişim</h2>
     <p>Email: <a href="mailto:meliharaz166@gmail.com">meliharaz166@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/meliharaz" target="_blank">linkedin.com/in/meliharaz</a></p>
-    <p>GitHub: <a href="https://github.com/meliharaz" target="_blank">github.com/meliharaz</a></p>
+    <p>GitHub: <a href="https://github.com/meliharz" target="_blank">github.com/meliharz</a></p>
   </section>
 </main>
 
